tests/parser/good/self/21.lat
void a() {
    int b, c, d;
    int e = 4;
}