tests/parser/bad/variable_use/3.lat
int a(int x, int x) {
    y = 1;
}